--- a/board/CubeMX_Config/CubeMX_Config.ioc
+++ b/board/CubeMX_Config/CubeMX_Config.ioc
@@ -1,6 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
@@ -25,9 +25,10 @@ Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin12=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin10=VP_ADC1_TempSens_Input
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin12=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin2=PA0-WKUP
 Mcu.Pin3=PA4
 Mcu.Pin4=PB10
@@ -36,7 +37,7 @@ Mcu.Pin6=PA9
 Mcu.Pin7=PA10
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=13
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -150,6 +151,8 @@ USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
+VP_ADC1_TempSens_Input.Mode=IN-TempSens
+VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
